--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
     <string name="button_send">Send</string>
     <string name="fill_this">Fill this</string>
     <string name="button_back">Go back</string>
-    <string name="fragment_one">This is fragment one</string>
-    <string name="fragment_two">This is fragment two</string>
+    <string name="fragment_one">This is fragment one\nI send data to the fragment below</string>
+    <string name="fragment_two">This is fragment two\nI send data to the fragment above</string>
+    <string name="button_fun">Press me for the real fun</string>
+    <string name="textview_enter_text_here">Enter text here</string>
+    <string name="textview_fillout">Please complete the below fields:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
