--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="button_fun">Press me for the real fun</string>
     <string name="textview_enter_text_here">Enter text here</string>
     <string name="textview_fillout">Please complete the below fields:</string>
+    <string name="first_name">Enter First Name:</string>
+    <string name="last_name">Enter Last Name:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
