--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="textview_fillout">Please complete the below fields:</string>
     <string name="first_name">Enter First Name:</string>
     <string name="last_name">Enter Last Name:</string>
+    <string name="age">Enter Your Age:</string>
+    <string name="submit">Submit</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
