--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="last_name">Enter Last Name:</string>
     <string name="age">Enter Your Age:</string>
     <string name="submit">Submit</string>
+    <string name="basic_activity">Basic Activity</string>
+    <string name="recycler_view">Recycler View</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
