--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="submit">Submit</string>
     <string name="basic_activity">Basic Activity</string>
     <string name="recycler_view">Recycler View</string>
+    <string name="archived_label">Archive</string>
+    <string name="undo_label">Undo</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
