--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">LearningApp</string>
-    <string name="button_send">Send</string>
     <string name="fill_this">Fill this</string>
-    <string name="button_back">Go back</string>
     <string name="fragment_one">This is fragment one\nI send data to the fragment below</string>
     <string name="fragment_two">This is fragment two\nI send data to the fragment above</string>
     <string name="button_fun">Press me for the real fun</string>
@@ -11,12 +9,21 @@
     <string name="first_name">Enter First Name:</string>
     <string name="last_name">Enter Last Name:</string>
     <string name="age">Enter Your Age:</string>
-    <string name="submit">Submit</string>
-    <string name="basic_activity">Basic Activity</string>
     <string name="fragment_data_movement">Fragment Data Movement</string>
-    <string name="recycler_view">Recycler View</string>
     <string name="archived_label">Archive</string>
     <string name="undo_label">Undo</string>
+
+
+    <!--  Button labels  -->
+    <string name="data_charts">Data Charts</string>
+    <string name="recycler_view">Recycler View</string>
+    <string name="basic_activity">Basic Activity</string>
+
+
+    <string name="submit">Submit</string>
+    <string name="button_send">Send</string>
+    <string name="button_back">Go back</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
