--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="recycler_view">Recycler View</string>
     <string name="basic_activity">Basic Activity</string>
     <string name="network_test">Network Test</string>
+    <string name="kiosk_button">Kiosk Sample Activity</string>
 
     <string name="submit">Submit</string>
     <string name="button_send">Send</string>
@@ -30,4 +31,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_two">TwoActivity</string>
+    <string name="title_activity_kiosk">KioskActivity</string>
 </resources>
