--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <string name="seconds_hint">Enter the seconds between pings</string>
     <string name="button_start_network">Start Network</string>
 
+    <!--  NavBarFragment  -->
+    <string name="next">Next</string>
+    <string name="back">Back</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_two">TwoActivity</string>
