--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <string name="next">Next</string>
     <string name="back">Back</string>
 
+    <!--  QuestionFragment  -->
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_two">TwoActivity</string>
