--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="basic_activity">Basic Activity</string>
     <string name="network_test">Network Test</string>
     <string name="kiosk_button">Kiosk Sample Activity</string>
+    <string name="bluetooth_button">Bluetooth Activity</string>
 
     <string name="submit">Submit</string>
     <string name="button_send">Send</string>
