--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,10 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
 
+    <!-- Bluetooth  -->
+    <string name="bluetooth_health_profile_not_available">Bluetooth health profile is not available</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_two">TwoActivity</string>
