--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,36 @@
     <string name="no">No</string>
 
     <!-- Bluetooth  -->
+    <string name="app_registration">App Registration</string>
+    <string name="bluetooth_not_available">Bluetooth is not available</string>
     <string name="bluetooth_health_profile_not_available">Bluetooth health profile is not available</string>
+    <string name="channel_connection">Channel Connection</string>
+    <string name="channel_connection_desc">(some devices automatically initiate connection)</string>
+    <string name="connect">Connect</string>
+    <string name="connected">CONNECTED</string>
+    <string name="connection_state">Connection State</string>
+    <string name="data_ind">Data Indicator</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="disconnected">DISCONNECTED</string>
+    <string name="empty"> </string>
+    <string name="none">None...</string>
+    <string name="ok">Okay</string>
+    <string name="read_data">Reading data&#8230;</string>
+    <string name="read_data_done">Done with reading data&#8230;</string>
+    <string name="register">Register</string>
+    <string name="select_device">Select a device</string>
+    <string name="status_create_channel">Create channel status: %d</string>
+    <string name="status_destroy_channel">Destroy channel status: %d</string>
+    <string name="status_msg">Status Message</string>
+    <string name="status_reg">App registration status: %d</string>
+    <string name="status_unreg">App 	 status: %d</string>
+    <string name="unregister">Unregister</string>
+    <string name="sp02">Sp02: </string>
+    <string name="heart_rate">HR: </string>
+    <string name="zero">0</string>
+    <string name="desc">Light Indicator</string>
+    <string name="version">Version: </string>
+
 
 
     <!-- TODO: Remove or change this placeholder text -->
